--- a/src/assets/scss/general.scss
+++ b/src/assets/scss/general.scss
@@ -3,3 +3,19 @@
   margin: 0;
   padding: 0;
 }
+
+img {
+  max-width: 100%;
+}
+
+ul {
+  list-style-type: none;
+}
+
+button {
+  padding: 0.5rem;
+  border: 5px solid #0282f9;
+  background-color: transparent;
+  color: white;
+  font-size: 1.5rem;
+}
